Addressed typos, etc.

--- a/about.html
+++ b/about.html
@@ -207,7 +207,9 @@ $(document).ready(function () {
 <hr />
 </div>
 
-<p>Copyright &copy; 2016 Byron Analytics LLC. All rights reserved.</p>
+<p align="center">
+  Website generated using R Markdown and RStudio. Copyright &copy; 2016 Byron Analytics LLC. All rights reserved.
+</p>
 
 
 
