--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@ $(document).ready(function () {
 <p>With a background in field biology, I have an integral understanding of the challenges posed in field research. Our applications are focused on functionality, reproducible research, and security. We also look for ways to implement crowdsourcing data to utilize citizen scientist in collecting large data sets to collaborate carefully designed experiments.</p>
 <hr />
 
-<p>Copyright &copy; 2016 Byron Analytics LLC. All rights reserved.</p>
+<p align="center">
+  Website generated using R Markdown and RStudio. Copyright &copy; 2016 Byron Analytics LLC. All rights reserved.
+</p>
 
 
 
