--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,3 @@
-<p>Copyright &copy; 2016 Byron Analytics LLC. All rights reserved.</p>
+<p align="center">
+  Website generated using R Markdown and RStudio. Copyright &copy; 2016 Byron Analytics LLC. All rights reserved.
+</p>
