added HiveMaps link

--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About</title>
+<title></title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,8 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-1.1/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
-<link href="site_libs/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -233,17 +231,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
 
 </div>
 
 
-<div id="kevin-w.-byron" class="section level3">
-<h3>Kevin W. Byron</h3>
-<p>I am a multi-disciplinary scientist with a marine ecology background and advanced coursework in modeling, simulation, and statistics. I’ve developed software to facilitate the compilation and analysis of data as well as utilized established programs and languages such as R, SAS, ArcGIS, NETLOGO, SATSCAN, ADMB, and SQL.</p>
-<p>While I was a marine biologist for the City of San Diego, my primary role was to develop R tools for data analysis and processing associated with benthic and oceanographic monitoring of near-shore coastal waters. I developed training courses in R as well as introduced git to the R analytics team. I also perform field work collecting samples, identifying and enumerating polychaetes, general tech support, scientific writing, coordinating ISO compliance through Microsoft Sharepoint, and database management.</p>
-<p>In addition to my work for the city, I taught Environmental Science for Platt College and run Byron Analytics, LLC - my consulting business for developing data tools for biologists. Current projects include automating data consolidation, analysis, and reporting for a local environmental firm as well as collaborating with a local bee keeper for an iphone tool that collects and visualizes population data for backyard bee keepers.</p>
-<hr />
+<div id="byronanalytics.github.io" class="section level1">
+<h1>ByronAnalytics.github.io</h1>
+<p>This repository contains a collection of R Markdown documents used to generate the <a href="byronanalytics.com">Byron Analytics website</a>. It serves as a simple example of reporting opportunities available within the R environment. Additional outputs are e-books, pdfs, and word documents.</p>
 </div>
 
 <p align="center">
