--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@ h6 {
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
-</head>
 
-<body>
 
 <style type = "text/css">
 .main-container {
@@ -194,8 +192,6 @@ $(document).ready(function () {
 });
 </script>
 
-<div class="container-fluid main-container">
-
 <!-- tabsets -->
 
 <style type="text/css">
@@ -269,6 +265,15 @@ $(document).ready(function () {
 
 
 
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
+
+
+
 
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
@@ -299,7 +304,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="https://github.com/ByronAnalytics/Shiny_at_Sea/wiki">
+      <a href="https://github.com/ByronAnalytics/Shiny_at_Sea/wiki/Welcome-to-the-Shiny_at_Sea-wiki!">
         <span class="ion ion-android-boat"></span>
          
         Shiny @ Sea
@@ -313,7 +318,7 @@ $(document).ready(function () {
       </a>
     </li>
     <li>
-      <a href="https://github.com/ByronAnalytics/Hive-Maps">
+      <a href="https://github.com/ByronAnalytics/Hive-Maps/wiki/Hive-Maps">
         <span class="fa fa-apple"></span>
          
         Hive Maps - iOS
