--- a/index.html
+++ b/index.html
@@ -311,6 +311,13 @@ $(document).ready(function () {
       </a>
     </li>
     <li>
+      <a href="https://byronanalytics.shinyapps.io/PopulationModel/">
+        <span class="fa fa-bullhorn"></span>
+         
+        Population Model Birth Announcement (Launch Shiny App)
+      </a>
+    </li>
+    <li>
       <a href="https://github.com/ByronAnalytics/TODO_Addin">
         <span class="fa fa-list"></span>
          
